Use jackson (de-)serialization for sessions